--- a/about.html
+++ b/about.html
@@ -25,11 +25,59 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    
+    <link rel="stylesheet" href="vendors/bootstrap.css">
     <link rel="stylesheet" href="vendors/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <section id="about-first">
+    <header class="py-2" id="header">
+      <div class="top-header custom_container">
+          <div class="row  align-items-center justify-content-between wrapper m-0 ">
+              <div class="col-3 p-0 logo"><img src="assets/ascendLogo.png" class="img-fluid" alt=""></div>
+              <div class="col-6 col-xl-5 links">
+                  <ul class="d-flex p-0 m-0 justify-content-between align-items-center">
+                      <li class="list-unstyled"><a class="px-2 active" href="home.html">Home</a></li>
+                      <li class="list-unstyled"><a class="px-2" href="about.html">About</a></li>
+                      <li class="list-unstyled"><a class="px-2" href="works.html">Our Works</a></li>
+                      <li class="list-unstyled"><a class="px-2" href="contact.html">Contact</a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+      <div class="side-header custom_container">
+          <div class="row align-items-center justify-content-between m-0">
+              <div class="col-5 p-0 col-sm-4 logo">
+                  <img src="assets/ascendLogo.png" class="img-fluid" alt="">
+              </div>
+              <div class="col-1" id="menuIcon"><i class="fa-solid fa-bars"></i></div>
+              <div class="col-12 " id="menu">
+                  <div class="top-part"> <img class="pt-3" src="assets/ascendLogo.png" alt="">
+                  <div id="menuClose"><i class="fa-solid fa-xmark"></i></div></div>
+                 
+
+                  <ul class="p-0 m-0">
+                      <li class="list-unstyled"><a href="home.html">Home</a></li>
+                      <li class="list-unstyled"><a href="about.html">About</a></li>
+                      <li class="list-unstyled"><a href="works.html">Our Works</a></li>
+                      <li class="list-unstyled"><a href="contact.html">Contact</a></li>
+                  </ul>
+              </div>
+          </div>
+          <div id="bottom-overlay"></div>
+      </div>
+
+
+  </header>
+  <section class="initial">
+    <div class="overlay">
+        <h1>About</h1>
+    </div>
+</section>
+    <section id="about-first" >
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-lg-6">
@@ -44,7 +92,7 @@
               xarici ölkələrə də təklif etmək imkanı yaradır.
             </p>
           </div>
-          <div class="col-12 col-lg-6">
+          <div class="col-12 col-lg-6 p-0">
             <div class="bg-orange-img">
               <img src="assets/about-first.png" alt="" />
             </div>
@@ -52,10 +100,10 @@
         </div>
       </div>
     </section>
-    <section id="about-founder">
+    <section id="about-founder" >
       <div class="container-fluid">
-        <div class="row row-gap-4">
-          <div class="col-12 col-lg-6">
+        <div class="row row-gap-4 align-items-center">
+          <div class="col-12 col-lg-6 p-0">
             <div class="bg-orange-img">
               <img src="assets/about-founder.png" alt="" />
             </div>
@@ -139,6 +187,82 @@
         </div>
       </div>
     </section>
+    <footer class="pt-4">
+      <div class="custom_container">
+          <div class="wrapper">
+
+              <div class="logo"><img class="img-fluid" src="assets/ascendLogo.png"alt="">
+                  <div>Hədəfimiz imkansızı bacarmaqdır</div>
+              </div>
+              <div class="responsive-group-box">
+                  <div class="links">
+                      <div class="h6 heading" onclick="toggleList('linksList')">
+                          Links <i class="fa-solid fa-angle-down"></i>
+                      </div>
+                      <ul class="p-0" id="linksList">
+                          <li><a href="home.html">Home</a></li>
+                          <li><a href="about.html">About</a></li>
+                          <li><a href="works.html">Our Works</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                      </ul>
+                  </div>
+                  <div class="contact">
+                      <div class="h6 heading" onclick="toggleList('contactList')">
+                          Contact <i class="fa-solid fa-angle-down"></i>
+                      </div>
+                      <ul class="p-0" id="contactList">
+                          <li><i class="fa-regular fa-envelope"></i><a href="#">ascendgroupbaku@gmail.com</a></li>
+                          <li><i class="fa-solid fa-phone"></i><a href="#"> +994 55 204 27 29</a></li>
+                      </ul>
+                  </div>
+                  <div class="location">
+                      <div class="h6 heading" onclick="toggleList('locationList')">
+                          Location <i class="fa-solid fa-angle-down"></i>
+                      </div>
+                      <ul class="p-0" id="locationList">
+                          <li><i class="fa-solid fa-location-dot"></i><a href="#">Binəqədi ş/s Zəngəzur restoranının
+                                  arxası, Bakı 1054</a></li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="group-box">
+                  <div class="links">
+                      <div class="h6 heading">
+                          Links
+                      </div>
+                      <ul class="p-0">
+                          <li><a href="home.html">Home</a></li>
+                          <li><a href="about.html">About</a></li>
+                          <li><a href="works.html">Our Works</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                      </ul>
+                  </div>
+                  <div class="contact">
+                      <div class="h6 heading">
+                          Contact
+                      </div>
+                      <ul class="p-0">
+                          <li><i class="fa-regular fa-envelope"></i><a href="#">ascendgroupbaku@gmail.com
+                              </a></li>
+                          <li><i class="fa-solid fa-phone "></i><a href="#"> +994 55 204 27 29</a></li>
+                      </ul>
+                  </div>
+                  <div class="location">
+                      <div class="h6 heading">
+                          Location
+                      </div>
+                      <ul class="p-0">
+                          <li><i class="fa-solid fa-location-dot"></i><a href="#">Binəqədi ş/s Zəngəzur restoranının
+                                  arxası, Bakı 1054</a></li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="copyright h6">© 2024 All rights reserved</div>
+
+          </div>
+      </div>
+  </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
